# jax_bnre_hmc

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/2param/: train.yaml
configs/linear_toy/: train.yaml
configs/sinusoid/: train.yaml
experiments/2param/: hmc.py  train.py
experiments/linear_toy/: hmc.py  train.py
experiments/sinusoid/: hmc.py  train.py
src/jax_bnre_hmc/: checkpointing.py  data.py  diagnostics.py  hmc.py  loss.py  model.py  train.py
