[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-bnre-hmc"
version = "0.0.0"
description = "Minimal JAX/Flax implementation of NRE/BNRE (v0)"
requires-python = ">=3.10"
dependencies = [
  "jax",
  "jaxlib",
  "flax",
  "optax",
  "hydra-core",
  "omegaconf",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

